--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react-router": "^2.7.0",
     "redux": "^3.5.2",
     "redux-form": "^6.0.2",
-    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.1.0",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.3.1"
