--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
-    "react-router": "^2.7.0",
+    "react-router": "^2.8.1",
     "redux": "^3.5.2",
     "redux-form": "^6.0.2",
     "redux-thunk": "^2.1.0",
+    "socket.io-client": "^1.4.8",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
-    "stylus-loader": "^2.3.1"
+    "stylus-loader": "^2.3.1",
+    "ui-router-react": "^0.2.3"
   }
 }
