--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-register": "^6.11.6",
     "express": "^4.14.0",
     "nib": "^1.1.2",
+    "react-edit-inline": "^1.0.8",
     "redux-devtools": "^3.3.1",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.6.1",
