--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@gitlab.com:junxianlim/react-todo.git"
+    "url": "https://github.com/PACIF1ER/react-client.git"
   },
   "author": "lim jun xian",
   "license": "ISC",
