--- a/package.json
+++ b/package.json
@@ -20,25 +20,37 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.11.6",
+    "es6-promise": "^4.0.5",
+    "json-loader": "^0.5.4",
     "express": "^4.14.0",
     "nib": "^1.1.2",
     "react-edit-inline": "^1.0.8",
     "redux-devtools": "^3.3.1",
     "webpack": "^1.13.2",
+    "webpack-merge": "^2.4.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.2"
   },
   "dependencies": {
-    "axios": "^0.14.0",
+    "axios": "^0.15.3",
+    "babel-plugin-es6-promise": "^1.1.0",
+    "babel-plugin-transform-object-rest-spread": "^6.19.0",
+    "formsy-react": "^0.19.2",
+    "immutable": "^3.8.1",
+    "material-ui": "^0.16.4",
+    "moment": "^2.17.1",
+    "react": "^15.4.1",
+    "react-addons-css-transition-group": "^15.4.1",
+    "react-dom": "^15.4.1",
+    "react-redux": "^4.4.6",
+    "react-router": "^3.0.1",
+    "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
+    "reselect": "^2.5.4",
     "css-loader": "^0.24.0",
     "lodash": "^4.15.0",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.8.1",
-    "redux": "^3.5.2",
     "redux-form": "^6.0.2",
-    "redux-thunk": "^2.1.0",
     "socket.io-client": "^1.4.8",
     "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
