--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "author": "lim jun xian",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.5",
     "babel-polyfill": "^6.13.0",
@@ -20,18 +20,21 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.11.6",
+    "css-loader": "^0.24.0",
     "es6-promise": "^4.0.5",
-    "json-loader": "^0.5.4",
     "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "json-loader": "^0.5.4",
     "nib": "^1.1.2",
     "react-edit-inline": "^1.0.8",
     "redux-devtools": "^3.3.1",
+    "resolve-url-loader": "^2.1.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.13.2",
     "webpack": "^1.13.2",
-    "webpack-merge": "^2.4.0",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.2"
-  },
-  "dependencies": {
+    "webpack-hot-middleware": "^2.12.2",
+    "webpack-merge": "^2.4.0",
     "axios": "^0.15.3",
     "babel-plugin-es6-promise": "^1.1.0",
     "babel-plugin-transform-object-rest-spread": "^6.19.0",
