--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "redux-devtools": "^3.3.1",
     "resolve-url-loader": "^2.1.0",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.13.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.2",
@@ -51,13 +51,15 @@
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "reselect": "^2.5.4",
-    "css-loader": "^0.24.0",
     "lodash": "^4.15.0",
     "redux-form": "^6.0.2",
     "socket.io-client": "^1.4.8",
-    "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.3.1",
     "ui-router-react": "^0.2.3"
+  },
+  "devDependencies": {
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6"
   }
 }
