--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "author": "lim jun xian",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.5",
+    "babel-plugin-es6-promise": "^1.1.0",
+    "babel-plugin-transform-object-rest-spread": "^6.19.0",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
@@ -24,39 +27,37 @@
     "es6-promise": "^4.0.5",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^3.0.0",
-    "json-loader": "^0.5.4",
-    "nib": "^1.1.2",
-    "react-edit-inline": "^1.0.8",
-    "redux-devtools": "^3.3.1",
-    "resolve-url-loader": "^2.1.0",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.2",
-    "webpack-merge": "^2.4.0",
-    "axios": "^0.15.3",
-    "babel-plugin-es6-promise": "^1.1.0",
-    "babel-plugin-transform-object-rest-spread": "^6.19.0",
     "formsy-react": "^0.19.2",
     "immutable": "^3.8.1",
+    "json-loader": "^0.5.4",
+    "lodash": "^4.15.0",
     "material-ui": "^0.16.4",
     "moment": "^2.17.1",
+    "nib": "^1.1.2",
     "react": "^15.4.1",
     "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-edit-inline": "^1.0.8",
+    "react-motion-ui-pack": "^0.10.3",
     "react-redux": "^4.4.6",
     "react-router": "^3.0.1",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "redux-devtools": "^3.3.1",
+    "redux-form": "^6.0.2",
     "redux-thunk": "^2.1.0",
     "reselect": "^2.5.4",
-    "lodash": "^4.15.0",
-    "redux-form": "^6.0.2",
+    "resolve-url-loader": "^2.1.0",
+    "sass-loader": "^6.0.6",
     "socket.io-client": "^1.4.8",
+    "style-loader": "^0.13.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.3.1",
-    "ui-router-react": "^0.2.3"
+    "ui-router-react": "^0.2.3",
+    "webpack": "^1.13.2",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.12.2",
+    "webpack-merge": "^2.4.0"
   },
   "devDependencies": {
     "node-sass": "^4.5.3",
